// ======================================================
// CORE
// ======================================================

model Company {
  id        String @id @default(uuid()) @db.Uuid
  name      String
  legalName String @map("legal_name")
  taxId     String @unique @map("tax_id")

  phone   String?
  email   String?
  website String?

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  branches Branch[]

  @@map("companies")
}

model Branch {
  id String @id @default(uuid()) @db.Uuid

  companyId String  @map("company_id") @db.Uuid
  company   Company @relation(fields: [companyId], references: [id])

  name String

  phone String?
  email String?

  address String?
  city    String?
  state   String?
  country String?

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  employees  Employee[]
  workOrders WorkOrder[]

  @@index([companyId])
  @@map("branches")
}

model Employee {
  id String @id @default(uuid()) @db.Uuid

  branchId String @map("branch_id") @db.Uuid
  branch   Branch @relation(fields: [branchId], references: [id])

  firstName String @map("first_name")
  lastName  String @map("last_name")

  email String?
  phone String?

  active Boolean @default(true)

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  user User?

  receivedWorkOrders WorkOrder[]
  assignedWorkOrders WorkOrderEmployee[]

  @@index([branchId])
  @@map("employees")
}

model User {
  id String @id @default(uuid()) @db.Uuid

  employeeId String   @unique @map("employee_id") @db.Uuid
  employee   Employee @relation(fields: [employeeId], references: [id])

  username     String @unique
  passwordHash String @map("password_hash")

  active Boolean @default(true)

  lastLogin DateTime? @map("last_login")

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  roles UserRole[]

  @@map("users")
}

model Role {
  id String @id @default(uuid()) @db.Uuid

  name        String  @unique
  description String?
  active      Boolean @default(true)

  createdAt DateTime @default(now()) @map("created_at")

  users UserRole[]

  @@map("roles")
}

model UserRole {
  userId String @map("user_id") @db.Uuid
  roleId String @map("role_id") @db.Uuid

  user User @relation(fields: [userId], references: [id])
  role Role @relation(fields: [roleId], references: [id])

  @@id([userId, roleId])
  @@index([roleId])
  @@map("user_roles")
}
